[package]
name = "hist2"
version = "0.1.0"
authors = ["sunny"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.1.1", features = ["canvas", "async-std", "debug"]}
chrono = "0.4"
async-std = { version = "1.0", features = ["unstable"] }
iced_native = "0.2"
atty = "0.2"
itertools = "0.9.0"