[package]
name = "hist2"
version = "0.1.0"
authors = ["sunny"]
edition = "2018"

[dependencies]
iced = { git="https://github.com/hecrj/iced", features = ["canvas", "async-std", "debug"]}
chrono = "0.4"
async-std = { version = "1.0", features = ["unstable"] }
iced_native = "0.2"
atty = "0.2"
itertools = "0.9.0"
clap = "2.33.1"